--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="shortcut icon" href="理佐麗奈.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>理佐 & 麗奈</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
           <h1>渡邉 理佐 & 守屋 麗奈</h1>
         </div>
         <div class="header-right">
-          <h3>作成者：BigRainbow</h3>
+          <h3>作成者：やまのすけ</h3>
         </div>
       </div>
     <div class="main">
@@ -55,4 +56,3 @@
 </div>
   </body>
 </html>
-
