--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h1>渡邉 理佐 & 守屋 麗奈</h1>
         </div>
         <div class="header-right">
-          <h3>作成者：やまのすけ</h3>
+          <h3>作成者<br />やまのすけ</h3>
         </div>
       </div>
     <div class="main">
