--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main">
     <div class="risa">
       <div class="risa-image">
-        <a href="https://sakurazaka46.com/s/s46/artist/21?ima=0425"><img src="理佐.jpg"></a>
+        <a href="https://risawatanabe.com/s/rw/?ima=2144"><img src="理佐.jpg"></a>
       </div>
       <div class="risa-prof">
         <h1>渡邉 理佐</h1>
